...
    <string name="todo_icon">todo_icon</string>
    <string name="content">Content</string>
    <string name="date_event">Date</string>
    <string name="new_memo">New memo</string>
    <string name="date">Date</string>
    <string name="action_undo">undo</string>
    <string name="action_settings">Settings</string>
    <string name="time">Time</string>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="action_edit">edit</string>
    <string name="about">About</string>
    <string name="version">Version:</string>
    <string name="pref_start_with_new_memo">Start with new memo</string>
    <string name="start_new_memo">start_new_memo</string>
    <string name="add_photo">+Photo</string>
    <string name="add_location">+Location</string>
    <string name="add_remainder">Remainder</string>
    <string name="add_file">+File</string>
    <string name="add_timestamp">+Add Timestamp</string>
...
