<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.eventest.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        windowActionModeOverlay="true"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="8dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintBottom_toTopOf="@+id/tvDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <View
        android:id="@+id/vDateTimeBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/lvEvents"
        app:layout_constraintEnd_toStartOf="@+id/emvMemo"
        app:layout_constraintStart_toStartOf="@+id/tvTime"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="fill_vertical"
        android:text="@string/date"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tvTime"
        app:layout_constraintEnd_toStartOf="@+id/emvMemo"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="fill_vertical"
        android:text="@string/time"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Compat.Notification"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/emvMemo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDate" />

    <com.example.user.eventest.EditMemoView
        android:id="@+id/emvMemo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:fadeScrollbars="false"
        android:hint="@string/new_memo"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:text=""
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvDate"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <ListView
        android:id="@+id/lvEvents"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emvMemo" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/bottomToolbar"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="start"
        android:background="@drawable/back"
        android:visibility="gone"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.v7.widget.ActionMenuView
            android:id="@+id/amvMenu"
            android:layout_width="wrap_content"
            android:layout_height="42dp" />
    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabNewMemo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_add_white_24px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.91"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.98"
            android:clickable="true"
            android:focusable="true" />

    </android.support.design.widget.CoordinatorLayout>
</android.support.constraint.ConstraintLayout>
