<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuAmSelectAll"
        android:checkable="false"
        android:icon="@drawable/ic_select_all_white_24px"
        android:title=""
        android:visible="true"
        app:showAsAction="never|ifRoom" />
    <item
        android:id="@+id/menuAmDelete"
        android:checkable="false"
        android:icon="@drawable/ic_delete_forever_white_24dp"
        android:visible="true"
        app:showAsAction="always"
        android:title="" />
</menu>